--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "test:unit": "cross-env CI=1 react-scripts test --env=jsdom",
     "test:watch": "react-scripts test --env=jsdom",
     "predeploy": "cd example && npm install && npm run build",
-    "deploy": "gh-pages -d example/build"
+    "deploy": "gh-pages -d example/build",
+    "start:example": "cd example && npm start"
   },
   "peerDependencies": {
     "react": "^16.0.0"
@@ -49,5 +50,11 @@
   },
   "files": [
     "dist"
-  ]
+  ],
+  "dependencies": {
+    "@babel/runtime": "^7.11.2",
+    "babel-loader": "^8.1.0",
+    "prop-types": "^15.7.2",
+    "styled-components": "^5.2.0"
+  }
 }
